--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sap/cds-hana": "^2",
     "@sap/cds-odata-v2-adapter-proxy": "^1.9.7",
     "@sap/xssec": "^3",
+    "mbt": "^1.2.27",
     "passport": "^0"
   },
   "devDependencies": {
