--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@sap/cds": "^7.8.2",
     "@sap/cds-hana": "^2",
     "@sap/cds-odata-v2-adapter-proxy": "^1.9.7",
+    "@sap/hana-client": "^2.20.20",
     "@sap/hdi-deploy": "^5.1.1",
     "@sap/xssec": "^3",
     "mbt": "^1.2.27",
@@ -31,7 +32,10 @@
   "cds": {
     "requires": {
       "[hybrid]": {
-        "db": "hana"
+        "db": "hana",
+        "hana": {
+          "deploy-format": "hdbtable"
+        }
       },
       "auth": {
         "[production]": {
