--- a/mta.yaml
+++ b/mta.yaml
@@ -8,7 +8,11 @@ build-parameters:
   before-all:
     - builder: custom
       commands:
+        - npm install
         - npx -p @sap/cds-dk cds build --production
+        - npm install @sap-cloud-sdk/http-client
+        - npm update --package-lock-only
+        - npm clean-install --production
 modules:
 # start of UI Module code
   - name: dancap-ui
