--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@sap-cloud-sdk/http-client": "^3.14.0",
     "@sap/cds": "^7.8.2",
     "@sap/cds-hana": "^2",
     "@sap/cds-odata-v2-adapter-proxy": "^1.9.7",
@@ -29,12 +30,11 @@
   "sapux": [
     "app/purchaseorderapp"
   ],
-  
   "cds": {
     "hana": {
       "deploy-format": "hdbtable",
       "syntax": "hdi"
-  },
+    },
     "requires": {
       "[hybrid]": {
         "db": "hana"
